--- a/public/MilleniumTravelAgency/Home/home.html
+++ b/public/MilleniumTravelAgency/Home/home.html
@@ -32,6 +32,12 @@
                 <li>
                   <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\Kontak\kontak.html">Kontak</a>
                 </li>
+                <li>
+                  <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\SignUp\daftar.html" style="font-size: 12px; margin-top: 25px; border-right: 1px solid white; padding-right: 30px;">Daftar</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\Login\login.html" style="font-size: 12px; margin-top: 25px; margin-left: 0px;">Masuk</a>
+                </li>
             </div>
           </div>
         </div>
@@ -89,21 +95,21 @@
         <div class="img">
           <img src="kawah.jpg" alt="kawah">
           <h3>Kawah Sikidang</h3>
-          <button type="button" class="button" style="vertical-align:middle" href="#"><span>Info Destinasi</span></button>
+          <a class="button" style="vertical-align:middle" href="D:\Semester 6\ABP\Millennium Travel Agency\TravelBlog\travelBlog2.html"><span>Info Destinasi</span></a>
         </div>
         <div class="img">
           <img src="telaga.jpg" alt="telaga">
           <h3>Telaga Warna</h3>
-          <button type="button" class="button" style="vertical-align:middle" href="#"><span>Info Destinasi</span></button>
+          <a class="button" style="vertical-align:middle" href="D:\Semester 6\ABP\Millennium Travel Agency\TravelBlog\travelBlog.html"><span>Info Destinasi</span></a>
         </div>
         <div class="img">
           <img src="candi-dieng.jpg" alt="candi">
           <h3>Candi Dieng</h3>
-          <button type="button" class="button" style="vertical-align:middle" href="#"><span>Info Destinasi</span></button>
+          <a class="button" style="vertical-align:middle"  href="D:\Semester 6\ABP\Millennium Travel Agency\TravelBlog\travelBlog2.html"><span>Info Destinasi</span></a>
         </div>
       </div>
       <div class="arrow" style="margin-right: 10%;margin-top: 5%;">
-        <a class="arrow_box" href="">Lihat Semua Destinasi</a>
+        <a class="arrow_box" href="D:\Semester 6\ABP\Millennium Travel Agency\TravelBlog\travelBlog.html">Lihat Semua Destinasi</a>
       </div>
     </section>
     <section id="konten4">
@@ -167,8 +173,6 @@
         <a class="arrow_box" href="">Pilih Paket Wisata</a>
       </div>
     </section>
-
-    
     <section id="konten6">
       <div>
         <img src="Millennium.png" alt="">
@@ -181,7 +185,6 @@
         <img src="fb.png" alt="fb">millennium.travelagency <br>
       </div>
     </section>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="home.js"></script>
