--- a/public/MilleniumTravelAgency/Kontak/kontak.html
+++ b/public/MilleniumTravelAgency/Kontak/kontak.html
@@ -7,9 +7,6 @@
     <link href="kontak.css" rel="stylesheet">
     <title>MILLENNIUM TRAVEl AGEN</title>    
   </head>
-  <style>
-    
-  </style>
   <body>
     <section id="navigasi">
       <nav class="navbar fixed-top navbar-expand-lg navbar-nav-scroll">
@@ -31,6 +28,12 @@
                 </li>
                 <li>
                   <a class="nav-link this" href="kontak.html">Kontak</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\SignUp\daftar.html" style="font-size: 12px; margin-top: 25px; border-right: 1px solid white; padding-right: 30px;">Daftar</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\Login\login.html" style="font-size: 12px; margin-top: 25px; margin-left: 0px;">Masuk</a>
                 </li>
             </div>
           </div>
