--- a/public/MilleniumTravelAgency/PaketWisata/paketWisata.html
+++ b/public/MilleniumTravelAgency/PaketWisata/paketWisata.html
@@ -33,6 +33,12 @@
                   <li>
                     <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\Kontak\kontak.html">Kontak</a>
                   </li>
+                  <li>
+                    <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\SignUp\daftar.html" style="font-size: 12px; margin-top: 25px; border-right: 1px solid white; padding-right: 30px;">Daftar</a>
+                  </li>
+                  <li>
+                    <a class="nav-link" href="D:\Semester 6\ABP\Millennium Travel Agency\Login\login.html" style="font-size: 12px; margin-top: 25px; margin-left: 0px;">Masuk</a>
+                  </li>
               </div>
             </div>
           </div>
