--- a/public/MilleniumTravelAgency/TravelBlog/kuliner.html
+++ b/public/MilleniumTravelAgency/TravelBlog/kuliner.html
@@ -46,58 +46,56 @@
             <nav class="nav-menu">
                 <ul class="contain">
                     <li>
-                        <a href="travelBlog.html" class="item this">Wisata Alam</a>
+                        <a href="travelBlog.html" class="item">Wisata Alam</a>
                     </li>
                     <li>
-                        <a href="kuliner.html" class="item" >Kuliner</a>
+                        <a href="kuliner.html" class="item this" >Kuliner</a>
                     </li>
                     <li>
-                      <a href="hotel.html" class="item">Hotel</a>
-                  </li>
-                  <li>
-                      <a href="hiburan.html" class="item">Hiburan</a>
-                  </li>
+                        <a href="hotel.html" class="item">Hotel</a>
+                    </li>
+                    <li>
+                        <a href="hiburan.html" class="item">Hiburan</a>
+                    </li>
                 </ul>
             </nav>
           </div>
           <div class="container">
             <div class="box-item">
                 <div class="left-item">
-                    <img src="telaga.jpeg" alt="">
+                    <img src="kuliner.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Telaga Warna</h3>
+                    <h3>Kuliner Banjarnegara</h3>
                     <p>
-                        Nama Telaga Warna sendiri diberikan karena keunikan fenomena alam yang terjadi di tempat ini, 
-                        yaitu warna air dari telaga tersebut yang sering berubah-ubah. 
+                        Beranekaragam makanan dan minuman khas Banjarnegara tersaji di gedung kuliner ini.
+                        Berbagai makanan kekinian pun tersedia di sini. Harga makanan dan minuman di sini sangat terjangkau 
 
-                        <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp15000/orang
+                        <p>Lokasi : Jl. Raya Brengkok, Banjarnegara <br>
+                        HTM &ensp;: Rp2000/motor <br>
+                        &emsp;&emsp;&emsp;&ensp; Rp5000/mobil
                         </p>
                     </p>
                 </div>
             </div>
             <div class="box-item">
                 <div class="left-item">
-                    <img src="sikunir.jpg" alt="">
+                    <img src="soto.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Bukit Sikunir</h3>
+                    <h3>Soto Krandegan</h3>
                     <p>
-                        Di Dieng, terdapat banyak bukit atau gunung yang bisa dijadikan pilihan untuk menikmati panorama sunrise karena kawasan Dieng merupakan dataran tinggi. 
-                        Salah satu bukit yang populer di Dieng dengan panorama sunrise-nya adalah Bukit Sikunir.
+                        Soto ini memiliki rasa kuah yang kaya, mulai dari rasa gurih hingga rasa 
+                        rempah dari bumbu khas yang berasal dari kunyit, lengkuas dan serai. 
+                        Dagingnya yang empuk dikukus hingga empat jam sehingga kenikmatan yang 
+                        dihasilkan soto ini sangat lengkap.
 
-                        <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp10000/orang
+                        <p>Lokasi &emsp;&emsp;&ensp; : Soto Pak Aping, Krandegan, Banjarnegara <br>
+                        Harga/porsi : Rp15000
                         </p>
                 </div>
             </div>
-            <div style="text-align: right;margin-right: 5%;margin-bottom: 5%;">
-              <a href="travelBlog.html" class="previous round">&#8249;</a>
-              <a href="travelBlog2.html" class="next round">&#8250;</a>
-            </div>
           </div>
-          
       </div>
       <section id="bottom">
         <div>
