--- a/public/MilleniumTravelAgency/TravelBlog/hiburan.html
+++ b/public/MilleniumTravelAgency/TravelBlog/hiburan.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="travelBlog.css" rel="stylesheet">
+    <link href="hiburan.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>MILLENNIUM TRAVEl AGEN</title>    
   </head>
@@ -46,58 +46,51 @@
             <nav class="nav-menu">
                 <ul class="contain">
                     <li>
-                        <a href="travelBlog.html" class="item this">Wisata Alam</a>
+                        <a href="travelBlog.html" class="item">Wisata Alam</a>
                     </li>
                     <li>
                         <a href="kuliner.html" class="item" >Kuliner</a>
                     </li>
                     <li>
-                      <a href="hotel.html" class="item">Hotel</a>
-                  </li>
-                  <li>
-                      <a href="hiburan.html" class="item">Hiburan</a>
-                  </li>
+                        <a href="hotel.html" class="item">Hotel</a>
+                    </li>
+                    <li>
+                        <a href="hiburan.html" class="item this">Hiburan</a>
+                    </li>
                 </ul>
             </nav>
           </div>
           <div class="container">
             <div class="box-item">
                 <div class="left-item">
-                    <img src="telaga.jpeg" alt="">
+                    <img src="billiard.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Telaga Warna</h3>
+                    <h3>Billiard Surya Yudha</h3>
                     <p>
-                        Nama Telaga Warna sendiri diberikan karena keunikan fenomena alam yang terjadi di tempat ini, 
-                        yaitu warna air dari telaga tersebut yang sering berubah-ubah. 
-
-                        <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp15000/orang
+                        Billiard bisa menjadi sarana hiburan dan interaksi sosial yang baik.
+                        <p>Lokasi : Jl. Raya Rejasa No.KM, RW.1, Rejasa <br>
+                        Rate Billiard/jam: Rp20000 (Champion table) | Rp25000 (Murray table).
                         </p>
                     </p>
                 </div>
             </div>
             <div class="box-item">
                 <div class="left-item">
-                    <img src="sikunir.jpg" alt="">
+                    <img src="alun.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Bukit Sikunir</h3>
+                    <h3>Alun-Alun Banjarnegara</h3>
                     <p>
-                        Di Dieng, terdapat banyak bukit atau gunung yang bisa dijadikan pilihan untuk menikmati panorama sunrise karena kawasan Dieng merupakan dataran tinggi. 
-                        Salah satu bukit yang populer di Dieng dengan panorama sunrise-nya adalah Bukit Sikunir.
+                        Wisata Alun Alun Kota Banjarnegara Jawa Tengah sangat cocok untuk mengisi kegiatan liburan anda. Wisata Alun Alun Kota Banjarnegara Jawa Tengah ini sangatlah baik bagi anda 
+                        semua yang berada di dekat atau di kejauhan untuk merapat mengunjungi tempat Wisata Alun Alun Kota Banjarnegara
 
-                        <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp10000/orang
+                        <p>Lokasi : Kutabanjar  <br>
+                        HTM &ensp; : Gratis
                         </p>
                 </div>
             </div>
-            <div style="text-align: right;margin-right: 5%;margin-bottom: 5%;">
-              <a href="travelBlog.html" class="previous round">&#8249;</a>
-              <a href="travelBlog2.html" class="next round">&#8250;</a>
-            </div>
           </div>
-          
       </div>
       <section id="bottom">
         <div>
@@ -114,6 +107,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="travelBlog.js"></script>
+    <script src="hiburan.js"></script>
   </body>
 </html>
