--- a/public/MilleniumTravelAgency/TravelBlog/travelBlog2.html
+++ b/public/MilleniumTravelAgency/TravelBlog/travelBlog2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="travelBlog.css" rel="stylesheet">
+    <link href="travelBlog2.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>MILLENNIUM TRAVEl AGEN</title>    
   </head>
@@ -63,32 +63,35 @@
           <div class="container">
             <div class="box-item">
                 <div class="left-item">
-                    <img src="telaga.jpeg" alt="">
+                    <img src="kawah.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Telaga Warna</h3>
+                    <h3>Kawah Sikidang</h3>
                     <p>
-                        Nama Telaga Warna sendiri diberikan karena keunikan fenomena alam yang terjadi di tempat ini, 
-                        yaitu warna air dari telaga tersebut yang sering berubah-ubah. 
+                        Kawah sikidang merupakan kawah aktif tersbesar yang ada di Dataran Tinggi Dieng. 
+                        Kawah ini memiliki satu telaga air panas kecil dengan air yang selalu mendidih dan lapangan 
+                        celah gas dengan titik-titik 
+                        yang selalu berpindah-pindah di dalam suatu lapangan seluas lebih kurang 4 hektare. 
 
-                        <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp15000/orang
+                        <p>Lokasi : Desa Dieng Kulon, Kabupaten Banjarnegara. <br>
+                        HTM &ensp;: Rp20000/orang
                         </p>
                     </p>
                 </div>
             </div>
             <div class="box-item">
                 <div class="left-item">
-                    <img src="sikunir.jpg" alt="">
+                    <img src="candi-dieng.jpg" alt="">
                 </div>
                 <div class="right-item">
-                    <h3>Bukit Sikunir</h3>
+                    <h3>Candi Dieng</h3>
                     <p>
-                        Di Dieng, terdapat banyak bukit atau gunung yang bisa dijadikan pilihan untuk menikmati panorama sunrise karena kawasan Dieng merupakan dataran tinggi. 
-                        Salah satu bukit yang populer di Dieng dengan panorama sunrise-nya adalah Bukit Sikunir.
+                        Kompleks Candi Dieng adalah kelompok kompleks candi Hindu abad ke-7 terletak di Dataran Tinggi Dieng, 
+                        Kabupaten Banjarnegara, Jawa Tengah, 
+                        Indonesia.Kompleks yang terdiri dari beberapa bangunan ini berasal dari Kerajaan Kalingga.
 
                         <p>Lokasi : Dieng <br>
-                        HTM &ensp;: Rp10000/orang
+                        HTM &ensp;: Rp15000/orang
                         </p>
                 </div>
             </div>
@@ -114,6 +117,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="travelBlog.js"></script>
+    <script src="travelBlog2.js"></script>
   </body>
 </html>
